Added the carousel to the site and cusomized the JS and CSS files.

--- a/src/App.css
+++ b/src/App.css
@@ -297,11 +297,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         transform: translateY(-20px);
     }
 }
+
+/************ THIS IS THE TYPING TEXT ************/
 .txt-rotate > .wrap {
   border-right: 0.08em solid #666;
 }
 
-/************ Skills Css ************/
+/************ Skills CSS ************/
 .skill {
   padding: 0 0 50px 0;
   position: relative;
